# SPIRV-Tools

./: CMakeLists.txt
src/source/: build-version.inc
