cmake_minimum_required(VERSION 3.12.4)
get_directory_property(hasParent PARENT_DIRECTORY)
if(NOT hasParent)
	option(unittests "unittests" OFF)
	get_filename_component(_PARENT_DIR ${CMAKE_CURRENT_SOURCE_DIR} DIRECTORY)
	set_property(GLOBAL PROPERTY GLOBAL_FETCHDEPS_BASE ${_PARENT_DIR}/al2o3 )
	include(FetchContent)
	FetchContent_Declare( al2o3 GIT_REPOSITORY https://github.com/DeanoC/al2o3 GIT_TAG master )
	FetchContent_GetProperties(al2o3)
	if(NOT al2o3_POPULATED)
		FetchContent_Populate(al2o3)
		add_subdirectory(${al2o3_SOURCE_DIR} ${al2o3_BINARY_DIR})
	endif()
	INIT_AL2O3(${CMAKE_CURRENT_SOURCE_DIR})
endif ()

SET_MIN_VERSIONS()
set(LibName gfx_spirvtools)

project(${LibName})
set(Interface
        ../spirv-tools/instrument.hpp
        ../spirv-tools/libspirv.h
        ../spirv-tools/libspirv.hpp
        ../spirv-tools/linker.hpp
        ../spirv-tools/optimizer.hpp
        )
set(Src
        source/assembly_grammar.cpp
        source/assembly_grammar.h
        source/binary.cpp
        source/binary.h
        source/cfa.h
        source/CMakeLists.txt
        source/diagnostic.cpp
        source/diagnostic.h
        source/disassemble.cpp
        source/disassemble.h
        source/enum_set.h
        source/enum_string_mapping.cpp
        source/enum_string_mapping.h
        source/ext_inst.cpp
        source/ext_inst.h
        source/extensions.cpp
        source/extensions.h
        source/extinst.debuginfo.grammar.json
        source/extinst.spv-amd-gcn-shader.grammar.json
        source/extinst.spv-amd-shader-ballot.grammar.json
        source/extinst.spv-amd-shader-explicit-vertex-parameter.grammar.json
        source/extinst.spv-amd-shader-trinary-minmax.grammar.json
        source/instruction.h
        source/latest_version_glsl_std_450_header.h
        source/latest_version_opencl_std_header.h
        source/latest_version_spirv_header.h
        source/libspirv.cpp
        source/macro.h
        source/name_mapper.cpp
        source/name_mapper.h
        source/opcode.cpp
        source/opcode.h
        source/operand.cpp
        source/operand.h
        source/parsed_operand.cpp
        source/parsed_operand.h
        source/pch_source.cpp
        source/pch_source.h
        source/print.cpp
        source/print.h
        source/software_version.cpp
        source/spirv_constant.h
        source/spirv_definition.h
        source/spirv_endian.cpp
        source/spirv_endian.h
        source/spirv_fuzzer_options.cpp
        source/spirv_fuzzer_options.h
        source/spirv_optimizer_options.cpp
        source/spirv_optimizer_options.h
        source/spirv_reducer_options.cpp
        source/spirv_reducer_options.h
        source/spirv_target_env.cpp
        source/spirv_target_env.h
        source/spirv_validator_options.cpp
        source/spirv_validator_options.h
        source/table.cpp
        source/table.h
        source/text.cpp
        source/text.h
        source/text_handler.cpp
        source/text_handler.h


        source/opt/aggressive_dead_code_elim_pass.cpp
        source/opt/aggressive_dead_code_elim_pass.h
        source/opt/basic_block.cpp
        source/opt/basic_block.h
        source/opt/block_merge_pass.cpp
        source/opt/block_merge_pass.h
        source/opt/block_merge_util.cpp
        source/opt/block_merge_util.h
        source/opt/build_module.cpp
        source/opt/build_module.h
        source/opt/ccp_pass.cpp
        source/opt/ccp_pass.h
        source/opt/cfg.cpp
        source/opt/cfg.h
        source/opt/cfg_cleanup_pass.cpp
        source/opt/cfg_cleanup_pass.h
        source/opt/CMakeLists.txt
        source/opt/code_sink.cpp
        source/opt/code_sink.h
        source/opt/combine_access_chains.cpp
        source/opt/combine_access_chains.h
        source/opt/compact_ids_pass.cpp
        source/opt/compact_ids_pass.h
        source/opt/composite.cpp
        source/opt/composite.h
        source/opt/const_folding_rules.cpp
        source/opt/const_folding_rules.h
        source/opt/constants.cpp
        source/opt/constants.h
        source/opt/copy_prop_arrays.cpp
        source/opt/copy_prop_arrays.h
        source/opt/dead_branch_elim_pass.cpp
        source/opt/dead_branch_elim_pass.h
        source/opt/dead_insert_elim_pass.cpp
        source/opt/dead_insert_elim_pass.h
        source/opt/dead_variable_elimination.cpp
        source/opt/dead_variable_elimination.h
        source/opt/decompose_initialized_variables_pass.cpp
        source/opt/decompose_initialized_variables_pass.h
        source/opt/decoration_manager.cpp
        source/opt/decoration_manager.h
        source/opt/def_use_manager.cpp
        source/opt/def_use_manager.h
        source/opt/dominator_analysis.cpp
        source/opt/dominator_analysis.h
        source/opt/dominator_tree.cpp
        source/opt/dominator_tree.h
        source/opt/eliminate_dead_constant_pass.cpp
        source/opt/eliminate_dead_constant_pass.h
        source/opt/eliminate_dead_functions_pass.cpp
        source/opt/eliminate_dead_functions_pass.h
        source/opt/eliminate_dead_functions_util.cpp
        source/opt/eliminate_dead_functions_util.h
        source/opt/eliminate_dead_members_pass.cpp
        source/opt/eliminate_dead_members_pass.h
        source/opt/feature_manager.cpp
        source/opt/feature_manager.h
        source/opt/fix_storage_class.cpp
        source/opt/fix_storage_class.h
        source/opt/flatten_decoration_pass.cpp
        source/opt/flatten_decoration_pass.h
        source/opt/fold.cpp
        source/opt/fold.h
        source/opt/fold_spec_constant_op_and_composite_pass.cpp
        source/opt/fold_spec_constant_op_and_composite_pass.h
        source/opt/folding_rules.cpp
        source/opt/folding_rules.h
        source/opt/freeze_spec_constant_value_pass.cpp
        source/opt/freeze_spec_constant_value_pass.h
        source/opt/function.cpp
        source/opt/function.h
        source/opt/generate_webgpu_initializers_pass.cpp
        source/opt/generate_webgpu_initializers_pass.h
        source/opt/if_conversion.cpp
        source/opt/if_conversion.h
        source/opt/inline_exhaustive_pass.cpp
        source/opt/inline_exhaustive_pass.h
        source/opt/inline_opaque_pass.cpp
        source/opt/inline_opaque_pass.h
        source/opt/inline_pass.cpp
        source/opt/inline_pass.h
        source/opt/inst_bindless_check_pass.cpp
        source/opt/inst_bindless_check_pass.h
        source/opt/instruction.cpp
        source/opt/instruction.h
        source/opt/instruction_list.cpp
        source/opt/instruction_list.h
        source/opt/instrument_pass.cpp
        source/opt/instrument_pass.h
        source/opt/ir_builder.h
        source/opt/ir_context.cpp
        source/opt/ir_context.h
        source/opt/ir_loader.cpp
        source/opt/ir_loader.h
        source/opt/iterator.h
        source/opt/legalize_vector_shuffle_pass.cpp
        source/opt/legalize_vector_shuffle_pass.h
        source/opt/licm_pass.cpp
        source/opt/licm_pass.h
        source/opt/local_access_chain_convert_pass.cpp
        source/opt/local_access_chain_convert_pass.h
        source/opt/local_redundancy_elimination.cpp
        source/opt/local_redundancy_elimination.h
        source/opt/local_single_block_elim_pass.cpp
        source/opt/local_single_block_elim_pass.h
        source/opt/local_single_store_elim_pass.cpp
        source/opt/local_single_store_elim_pass.h
        source/opt/local_ssa_elim_pass.cpp
        source/opt/local_ssa_elim_pass.h
        source/opt/log.h
        source/opt/loop_dependence.cpp
        source/opt/loop_dependence.h
        source/opt/loop_dependence_helpers.cpp
        source/opt/loop_descriptor.cpp
        source/opt/loop_descriptor.h
        source/opt/loop_fission.cpp
        source/opt/loop_fission.h
        source/opt/loop_fusion.cpp
        source/opt/loop_fusion.h
        source/opt/loop_fusion_pass.cpp
        source/opt/loop_fusion_pass.h
        source/opt/loop_peeling.cpp
        source/opt/loop_peeling.h
        source/opt/loop_unroller.cpp
        source/opt/loop_unroller.h
        source/opt/loop_unswitch_pass.cpp
        source/opt/loop_unswitch_pass.h
        source/opt/loop_utils.cpp
        source/opt/loop_utils.h
        source/opt/mem_pass.cpp
        source/opt/mem_pass.h
        source/opt/merge_return_pass.cpp
        source/opt/merge_return_pass.h
        source/opt/module.cpp
        source/opt/module.h
        source/opt/null_pass.h
        source/opt/optimizer.cpp
        source/opt/pass.cpp
        source/opt/pass.h
        source/opt/pass_manager.cpp
        source/opt/pass_manager.h
        source/opt/passes.h
        source/opt/pch_source_opt.cpp
        source/opt/pch_source_opt.h
        source/opt/private_to_local_pass.cpp
        source/opt/private_to_local_pass.h
        source/opt/process_lines_pass.cpp
        source/opt/process_lines_pass.h
        source/opt/propagator.cpp
        source/opt/propagator.h
        source/opt/reduce_load_size.cpp
        source/opt/reduce_load_size.h
        source/opt/redundancy_elimination.cpp
        source/opt/redundancy_elimination.h
        source/opt/reflect.h
        source/opt/register_pressure.cpp
        source/opt/register_pressure.h
        source/opt/remove_duplicates_pass.cpp
        source/opt/remove_duplicates_pass.h
        source/opt/replace_invalid_opc.cpp
        source/opt/replace_invalid_opc.h
        source/opt/scalar_analysis.cpp
        source/opt/scalar_analysis.h
        source/opt/scalar_analysis_nodes.h
        source/opt/scalar_analysis_simplification.cpp
        source/opt/scalar_replacement_pass.cpp
        source/opt/scalar_replacement_pass.h
        source/opt/set_spec_constant_default_value_pass.cpp
        source/opt/set_spec_constant_default_value_pass.h
        source/opt/simplification_pass.cpp
        source/opt/simplification_pass.h
        source/opt/split_invalid_unreachable_pass.cpp
        source/opt/split_invalid_unreachable_pass.h
        source/opt/ssa_rewrite_pass.cpp
        source/opt/ssa_rewrite_pass.h
        source/opt/strength_reduction_pass.cpp
        source/opt/strength_reduction_pass.h
        source/opt/strip_atomic_counter_memory_pass.cpp
        source/opt/strip_atomic_counter_memory_pass.h
        source/opt/strip_debug_info_pass.cpp
        source/opt/strip_debug_info_pass.h
        source/opt/strip_reflect_info_pass.cpp
        source/opt/strip_reflect_info_pass.h
        source/opt/struct_cfg_analysis.cpp
        source/opt/struct_cfg_analysis.h
        source/opt/tree_iterator.h
        source/opt/type_manager.cpp
        source/opt/type_manager.h
        source/opt/types.cpp
        source/opt/types.h
        source/opt/unify_const_pass.cpp
        source/opt/unify_const_pass.h
        source/opt/upgrade_memory_model.cpp
        source/opt/upgrade_memory_model.h
        source/opt/value_number_table.cpp
        source/opt/value_number_table.h
        source/opt/vector_dce.cpp
        source/opt/vector_dce.h
        source/opt/workaround1209.cpp
        source/opt/workaround1209.h

        source/val/basic_block.cpp
        source/val/basic_block.h
        source/val/construct.cpp
        source/val/construct.h
        source/val/decoration.h
        source/val/function.cpp
        source/val/function.h
        source/val/instruction.cpp
        source/val/instruction.h
        source/val/validate.cpp
        source/val/validate.h
        source/val/validate_adjacency.cpp
        source/val/validate_annotation.cpp
        source/val/validate_arithmetics.cpp
        source/val/validate_atomics.cpp
        source/val/validate_barriers.cpp
        source/val/validate_bitwise.cpp
        source/val/validate_builtins.cpp
        source/val/validate_capability.cpp
        source/val/validate_cfg.cpp
        source/val/validate_composites.cpp
        source/val/validate_constants.cpp
        source/val/validate_conversion.cpp
        source/val/validate_datarules.cpp
        source/val/validate_debug.cpp
        source/val/validate_decorations.cpp
        source/val/validate_derivatives.cpp
        source/val/validate_execution_limitations.cpp
        source/val/validate_extensions.cpp
        source/val/validate_function.cpp
        source/val/validate_id.cpp
        source/val/validate_image.cpp
        source/val/validate_instruction.cpp
        source/val/validate_interfaces.cpp
        source/val/validate_layout.cpp
        source/val/validate_literals.cpp
        source/val/validate_logicals.cpp
        source/val/validate_memory.cpp
        source/val/validate_memory_semantics.cpp
        source/val/validate_memory_semantics.h
        source/val/validate_misc.cpp
        source/val/validate_mode_setting.cpp
        source/val/validate_non_uniform.cpp
        source/val/validate_primitives.cpp
        source/val/validate_scopes.cpp
        source/val/validate_scopes.h
        source/val/validate_small_type_uses.cpp
        source/val/validate_type.cpp
        source/val/validation_state.cpp
        source/val/validation_state.h

        
        source/util/bit_vector.cpp
        source/util/parse_number.cpp
        source/util/string_utils.cpp
        source/util/timer.cpp
        )

set(Deps
        gfx_spirvheaders
        )

ADD_LIB(${LibName} "${Interface}" "${Src}" "${Deps}")
target_compile_definitions(${LibName} PRIVATE _SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING)
